--- a/frontend/clonium-web/src/index.html
+++ b/frontend/clonium-web/src/index.html
@@ -6,11 +6,11 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:url"                content="https://clonium.herokuapp.com/" />
+  <meta property="og:url"                content="https://infinite-inlet-24215.herokuapp.com/" />
   <meta property="og:type"               content="website" />
   <meta property="og:title"              content="Clonium Web Game" />
   <meta property="og:description"        content="The web adaptation for the addictive android game BCG (Board Games Collection). Developed as an open-source project by Rafaa Seddik and Ahmed Khalil Seddik." />
-  <meta property="og:image"              content="https://clonium.herokuapp.com/assets/img/fb.jpg" />
+  <meta property="og:image"              content="https://infinite-inlet-24215.herokuapp.com/assets/img/fb.jpg" />
   <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
   <script type='text/javascript'>
       window.smartlook||(function(d) {
